MDEV-35866 CHECK TABLE get number of rows without HA_STATS_RECORDS_IS_EXACT

Call ha_rnd_init followed by two ha_rnd_next's to find whether there
is more than one row.